comments and script file

--- a/Helloworld/index.html
+++ b/Helloworld/index.html
@@ -9,9 +9,11 @@
         This is a basic js learning module.
     </h1>
     <!-- displaying the alert box from external js file -->
-    <script src="./index.js">
+    <!-- the absolute path starts with ./, below one is a relative path to js file, can be given to a file within same directory    -->
+    <script src="index.js">
     </script>
     <!-- displaying an alert box using inline javascript code -->
+    <!-- a script file cannot have both code and  src file pointed to it-->
     <script>
        alert ('hello shanky');
     </script>
