tried making age calculator but failed terribly

--- a/Helloworld/index.html
+++ b/Helloworld/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,9 +16,12 @@
     <!-- displaying an alert box using inline javascript code -->
     <!-- a script file cannot have both code and  src file pointed to it-->
     <script>
-       alert ('hello shanky');
+        alert('hello shanky');
     </script>
 </head>
 <body>
+    <script src=variables.js>
+    </script>
 </body>
+
 </html>
