maintained folder structure

--- a/Helloworld/html/index.html
+++ b/Helloworld/html/index.html
@@ -11,7 +11,7 @@
     </h1>
     <!-- displaying the alert box from external js file -->
     <!-- the absolute path starts with ./, below one is a relative path to js file, can be given to a file within same directory    -->
-    <script src="index.js">
+    <script src="./index.js">
     </script>
     <!-- displaying an alert box using inline javascript code -->
     <!-- a script file cannot have both code and  src file pointed to it-->
@@ -20,7 +20,7 @@
     </script>
 </head>
 <body>
-    <script src=variables.js>
+    <script src=./Js/variables.js>
     </script>
 </body>
 
